deploy/penguin-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: penguin-web
  namespace: penguin
spec:
  selector:
    matchLabels:
      app: penguin-web
  replicas: 2
  template:
    metadata:
      labels:
        app: penguin-web
    spec:
      containers:
        - name: penguin-web
          image: 10.105.58.187:5000/penguin-web:145
          imagePullPolicy: Always
          ports:
          - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 5
