deploy/penguin-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: penguin-web
  namespace: penguin
spec:
  selector:
    app: penguin-web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
