deploy/penguin-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: penguin-web-ingress
  namespace: penguin
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: "https://auth.penguintribe.net/auth?alwaysSuccess=true"
    #nginx.ingress.kubernetes.io/auth-signin: "$scheme://$host$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "Authorization,X-Auth-Request-User,X-Auth-Request-Email"
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: penguintribe.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend :
          service:
            name: penguin-web
            port:
              number: 8081
